--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,7 +22,7 @@ security:
                 enable_csrf: true
             logout:
                 path: app_logout
-                target: auth.login
+                target: app_login
                 # where to redirect after logout
                 # target: app_any_route
 
